PyMaker/datas/object2/RawHTML/i15001/Python_DOC_referPages.django-haystack-syntax-error.txt
<div class="post-text" itemprop="text">
<p>I am trying to run a Django project that works fine on my collegue's machine, but I get an error from haystack when trying to runserver.</p>
<pre><code>  File "manage.py", line 10, in &lt;module&gt;
    execute_from_command_line(sys.argv)
  File "/usr/local/lib/python3.2/dist-packages/django/core/management/__init__.py", line 399, in execute_from_command_line
    utility.execute()
  File "/usr/local/lib/python3.2/dist-packages/django/core/management/__init__.py", line 392, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
  File "/usr/local/lib/python3.2/dist-packages/django/core/management/base.py", line 242, in run_from_argv
    self.execute(*args, **options.__dict__)
  File "/usr/local/lib/python3.2/dist-packages/django/core/management/base.py", line 280, in execute
    translation.activate('en-us')
  File "/usr/local/lib/python3.2/dist-packages/django/utils/translation/__init__.py", line 130, in activate
    return _trans.activate(language)
  File "/usr/local/lib/python3.2/dist-packages/django/utils/translation/trans_real.py", line 188, in activate
    _active.value = translation(language)
  File "/usr/local/lib/python3.2/dist-packages/django/utils/translation/trans_real.py", line 177, in translation
    default_translation = _fetch(settings.LANGUAGE_CODE)
  File "/usr/local/lib/python3.2/dist-packages/django/utils/translation/trans_real.py", line 159, in _fetch
    app = import_module(appname)
  File "/usr/lib/python3.2/importlib/__init__.py", line 124, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "/usr/lib/python3.2/importlib/_bootstrap.py", line 821, in _gcd_import
    loader.load_module(name)
  File "/usr/lib/python3.2/importlib/_bootstrap.py", line 436, in load_module
    return self._load_module(fullname)
  File "/usr/lib/python3.2/importlib/_bootstrap.py", line 141, in decorated
    return fxn(self, module, *args, **kwargs)
  File "/usr/lib/python3.2/importlib/_bootstrap.py", line 342, in _load_module
    exec(code_object, module.__dict__)
  File "/usr/local/lib/python3.2/dist-packages/haystack/__init__.py", line 7, in &lt;module&gt;
    from haystack.utils import loading
  File "/usr/local/lib/python3.2/dist-packages/haystack/utils/__init__.py", line 28
    raise AttributeError(u"Provided string '%s' is not a valid identifier." % obj_or_string)
                                                                          ^
SyntaxError: invalid syntax
</code></pre>
<p>I have haystack included in your installed apps.</p>
<p>Linux ubuntu 3.5.0-44-generic #67-Ubuntu SMP Tue Nov 12 19:36:14 UTC 2013 x86_64 x86_64 x86_64 GNU/Linux</p>
<p>Python 3.2.3</p>
<p>pip 6.0.8 from /usr/local/lib/python3.2/dist-packages (python 3.2)</p>
<pre><code>Name: django-haystack
Version: 2.3.1
Location: /usr/local/lib/python3.2/dist-packages
Requires: Django
</code></pre>
<p>Any ideas are welcome</p>
<p>Thanks</p>
</div>
<div class="post-text" itemprop="text">
<p>This appears to be a Python version issue. Python 3.2 does not have the <code>u</code> prefix for strings, because strings are unicode by default in Python 3. The prefix was reintroduced in Python 3.3 to make compatibility with 2.7 easier. See the <a href="https://docs.python.org/3/whatsnew/3.3.html" rel="nofollow">3.3 release notes</a>.</p>
<p>Note that the <a href="https://pypi.python.org/pypi/django-haystack/2.3.1" rel="nofollow">PyPI page for Haystack 2.3.1</a> mentions 3.3+ as a requirement.</p>
<p>You should upgrade your Python version to 3.3.</p>
</div>
<span class="comment-copy">Please could you paste the relevant part of your code?</span>
<span class="comment-copy">There aren't any changes to his code so I don't know what to post, and it looks like the error comes from haystack.</span>
<span class="comment-copy">Thanks, I have now upgraded my version of python3. My version of django is still installed for python3.2, but on reinstall pip3 installs it to python3.2, how do I install a specific version of pip3, or change the version of python it tries to install to?</span>
<span class="comment-copy">Use a virtualenv.</span>
